--- a/AngularInsights/src/app/components/header/header.component.html
+++ b/AngularInsights/src/app/components/header/header.component.html
@@ -1,1 +1,15 @@
-<p>header works!</p>
+<header class="header">
+    <div class="container">
+      <a routerLink="/" class="logo">
+        <span>Angular</span>Insights
+      </a>
+      
+      <nav class="nav-menu">
+        <ul>
+          <li><a routerLink="/" class="nav-link">Home</a></li>
+          <li><a routerLink="/posts" class="nav-link">Artigos</a></li>
+          <li><a class="nav-link">Sobre</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
