--- a/AngularInsights/src/app/pages/home/home.component.scss
+++ b/AngularInsights/src/app/pages/home/home.component.scss
@@ -1,4 +1,6 @@
-@use 'src/styles/variables' as *;
+@use 'styles/_variables' as *;
+
+
 
 .hero {
   background: linear-gradient(rgba($primary-color, 0.9), rgba($primary-color, 0.9)),
