--- a/AngularInsights/src/app/shared/loading-spinner/loading-spinner.component.scss
+++ b/AngularInsights/src/app/shared/loading-spinner/loading-spinner.component.scss
@@ -1,4 +1,5 @@
-@use 'src/styles/variables' as *;
+@use 'styles/_variables' as *;
+
 
 .spinner-overlay {
   position: fixed;
@@ -19,6 +20,12 @@
     border-top-color: transparent;
     border-radius: 50%;
     animation: spin 1s linear infinite;
+
+    &[size="small"] {
+      width: 20px;
+      height: 20px;
+      border-width: 2px;
+    }
   }
 }
 
