--- a/AngularInsights/src/app/components/footer/footer.component.scss
+++ b/AngularInsights/src/app/components/footer/footer.component.scss
@@ -1,9 +1,8 @@
-@use 'styles/_variables' as *;
-
-
+@use 'sass:color';             
+@use 'styles/_variables' as *; 
 
 .footer {
-  background: darken($primary-color, 5%);
+  background: color.adjust($primary-color, $lightness: -5%);
   color: $light-text;
   padding: 4rem 0 2rem;
   margin-top: auto;
@@ -18,6 +17,8 @@
   }
 
   .footer-section {
+    margin-bottom: 2rem; 
+
     h4 {
       color: $accent-color;
       margin-bottom: 1.5rem;
@@ -39,7 +40,7 @@
       }
     }
 
-    form {
+    .form-container {
       display: flex;
       gap: 0.5rem;
       flex-wrap: wrap;
@@ -69,10 +70,26 @@
     }
   }
 
+  .message {
+    margin-top: 1rem;
+    font-style: italic;
+    color: $light-text;
+  }
+
   .copyright {
     text-align: center;
     margin-top: 3rem;
     opacity: 0.8;
     font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .footer {
+    padding: 2rem 1rem;
+
+    .footer-section {
+      margin-bottom: 1rem;
+    }
   }
 }
