--- a/AngularInsights/src/app/pages/post-detail/post-detail.component.scss
+++ b/AngularInsights/src/app/pages/post-detail/post-detail.component.scss
@@ -1,6 +1,5 @@
+@use 'sass:color';
 @use 'styles/_variables' as *;
-
-
 
 .post-detail {
   max-width: 800px;
@@ -81,8 +80,9 @@
       margin-bottom: 1.5rem;
     }
 
+    // Substituindo lighten($primary-color, 75%)
     pre {
-      background: lighten($primary-color, 75%);
+      background: color.adjust($primary-color, $lightness: 75%);
       padding: 1rem;
       border-radius: $border-radius;
       overflow-x: auto;
@@ -94,7 +94,8 @@
       background: rgba($accent-color, 0.1);
       padding: 0.2rem 0.4rem;
       border-radius: 4px;
-      color: darken($accent-color, 10%);
+      // Substituindo darken($accent-color, 10%)
+      color: color.adjust($accent-color, $lightness: -10%);
     }
 
     img {
