--- a/AngularInsights/src/app/pages/post-list/post-list.component.scss
+++ b/AngularInsights/src/app/pages/post-list/post-list.component.scss
@@ -1,6 +1,5 @@
+@use 'sass:color';
 @use 'styles/_variables' as *;
-
-
 
 .post-list {
   padding: $section-padding;
@@ -14,5 +13,9 @@
   .no-posts {
     text-align: center;
     color: rgba($dark-text, 0.6);
+  }
+
+  @media (max-width: 768px) {
+    padding: 2rem 1rem;
   }
 }
