--- a/AngularInsights/src/styles.scss
+++ b/AngularInsights/src/styles.scss
@@ -1,9 +1,11 @@
+@use 'sass:color';
 @use 'styles/_variables' as *;
-
 
 body {
   font-family: 'Segoe UI', system-ui, sans-serif;
   line-height: 1.6;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
