--- a/AngularInsights/src/app/components/header/header.component.html
+++ b/AngularInsights/src/app/components/header/header.component.html
@@ -1,6 +1,7 @@
 <header class="header">
   <div class="container">
     <a routerLink="/" class="logo">
+      <img src="/assets/images/angular-icon.svg" alt="Logo Angular Insights" class="logo-img" />
       <span>Angular</span>Insights
     </a>
     
