--- a/AngularInsights/src/app/pages/home/home.component.html
+++ b/AngularInsights/src/app/pages/home/home.component.html
@@ -21,10 +21,17 @@
     <h2>Tecnologias Dominadas</h2>
     <div class="skills-grid">
       <div class="skill-card">
-        <img src="/assets/icons/angular.svg" alt="Angular">
+        <img src="/assets/images/angular-icon.svg" alt="Angular">
         <h3>Angular Framework</h3>
         <p>Domínio avançado de componentes, serviços e RxJS</p>
+      </div>
+
+      <div class="skill-card">
+        <img src="/assets/images/typescript-2.svg" alt="TypeScript">
+        <h3>TypeScript</h3>
+        <p>Tipos, interfaces e práticas avançadas de desenvolvimento</p>
       </div>
     </div>
   </div>
 </section>
+
